# prometheus

./: .gitignore  CHANGELOG.md  ExampleV3.hs  prometheus.cabal  stack-9.10.yaml  stack-9.8.yaml  stack.yaml
.github/workflows/: ci.yml
prometheus-ghc-stats/: CHANGELOG.md  README.md  cabal.project  prometheus-ghc-stats.cabal
prometheus-ghc-stats/src/lib/System/Metrics/Prometheus/: GHCStats.hs
src/Prometheus/: V3.hs
src/Prometheus/V3/: Collector.hs  Encode.hs  Label.hs  LabelName.hs  MetricName.hs  Name.hs  Registry.hs  Sample.hs
src/Prometheus/V3/Encode/: Value.hs
src/Prometheus/V3/Http/: Serve.hs
src/Prometheus/V3/Metric/: Base.hs  Counter.hs  Gauge.hs  Histogram.hs  Labelled.hs
src/Prometheus/V3/Utils/: FromRealFrac.hs
src/System/Metrics/Prometheus/: Metric.hs  Registry.hs  RegistryT.hs
src/System/Metrics/Prometheus/Concurrent/: Registry.hs  RegistryT.hs
src/System/Metrics/Prometheus/Encode/: Text.hs
src/System/Metrics/Prometheus/Metric/: Counter.hs  Gauge.hs  Histogram.hs
